--- a/app_files/templates/select.html
+++ b/app_files/templates/select.html
@@ -17,9 +17,20 @@
                             </button>
                         {% endfor %}
                     </div>
-                    <a href="{{ url_for('bulk_download') }}" class="btn btn-success">
-                        📥 Process All Files & Download Excel
-                    </a>
+                    
+                    <!-- Enhanced bulk download section -->
+                    <div class="row g-2">
+                        <div class="col-md-6">
+                            <a href="{{ url_for('bulk_download') }}" class="btn btn-success w-100">
+                                <i class="fas fa-file-excel me-2"></i>Process All Files & Download Excel
+                            </a>
+                        </div>
+                        <div class="col-md-6">
+                            <a href="{{ url_for('bulk_download_word') }}" class="btn btn-info w-100">
+                                <i class="fas fa-file-word me-2"></i>Process All Files & Download Word
+                            </a>
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
